--- a/_38k_transimitter.vcxproj.filters
+++ b/_38k_transimitter.vcxproj.filters
@@ -40,6 +40,9 @@
     <ClInclude Include="IRMessage.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="LedRGBIndicator.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="IRMessaging.cpp">
@@ -58,6 +61,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="IRMessage.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="LedRGBIndicator.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
