--- a/_38k_transimitter.vcxproj
+++ b/_38k_transimitter.vcxproj
@@ -125,6 +125,7 @@
     </ClInclude>
     <ClInclude Include="LedRGBIndicator.h" />
     <ClInclude Include="LedStatusBar.h" />
+    <ClInclude Include="RobotLifeCycle.h" />
     <ClInclude Include="RobotController.h">
       <FileType>CppCode</FileType>
     </ClInclude>
@@ -139,6 +140,7 @@
     <ClCompile Include="IRMessaging.cpp" />
     <ClCompile Include="LedRGBIndicator.cpp" />
     <ClCompile Include="LedStatusBar.cpp" />
+    <ClCompile Include="RobotLifeCycle.cpp" />
     <ClCompile Include="RobotController.cpp" />
     <ClCompile Include="RobotModel.cpp" />
     <ClCompile Include="SoundPlayer.cpp" />
