1. added serial admin interface, added blink to ledrgb, added constants.h. 2. code cleanup

--- a/_38k_transimitter.vcxproj
+++ b/_38k_transimitter.vcxproj
@@ -119,6 +119,7 @@
     </None>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Constants.h" />
     <ClInclude Include="IRMessage.h" />
     <ClInclude Include="IRMessaging.h">
       <FileType>CppCode</FileType>
