--- a/_38k_transimitter.vcxproj.filters
+++ b/_38k_transimitter.vcxproj.filters
@@ -46,6 +46,9 @@
     <ClInclude Include="RobotLifeCycle.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Constants.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="IRMessaging.cpp">
